include/libmem/libmem.h

/* Primitive types */
typedef void     lm_void_t;
typedef enum {
	LM_FALSE = 0,
	LM_TRUE = 1
}  lm_bool_t;
typedef size_t    lm_size_t;
typedef const lm_char_t *lm_string_t;
/* OS primitive types */
typedef uint32_t lm_pid_t;
typedef struct lm_process_t {
	lm_pid_t  pid;
	lm_pid_t  ppid;
	lm_arch_t arch;
	lm_size_t bits;
	lm_time_t start_time; /* Process start timestamp, in milliseconds since last boot */
	lm_char_t path[LM_PATH_MAX];
	lm_char_t name[LM_PATH_MAX];
} lm_process_t;
typedef struct lm_thread_t {
	lm_tid_t tid;
	lm_pid_t owner_pid;
} lm_thread_t;
typedef struct lm_module_t {
	lm_address_t base;
	lm_address_t end;
	lm_size_t    size;
	lm_char_t    path[LM_PATH_MAX];
	lm_char_t    name[LM_PATH_MAX];
} lm_module_t;
/* An allocated segment of memory */
typedef struct lm_segment_t {
	lm_address_t base;
	lm_address_t end;
	lm_size_t    size;
	lm_prot_t    prot;
} lm_segment_t;
typedef struct lm_symbol_t {
	lm_string_t  name;
	lm_address_t address;
} lm_symbol_t;
/*
 * API guidelines
 *
 * 1.  User facing functions should return when receiving bad parameters.
 *
 * 2.  Internal functions should 'assert' to check for bad parameters.
 *
 * 3.  Immutable struct pointers should be 'const'.
 *
 * 4.  Immutable strings should be 'lm_string_t'.
 *
 * 5.  Output variable pointers in functions should be at the end, unless
 *     it doesn't make sense to put it there (for example, when there is
 *     a size parameter after a mutable buffer).
 *
 * 6.  All user facing functions should have the 'LM_API' prefix for
 *     automatic importing and exporting.
 *
 * 7.  All user facing callables should have the 'LM_CALL' infix to ensure 
 *     that the calling convention for all callables is the same.
 *     This includes callbacks.
 *
 * 8.  Functions that run callbacks should have an 'lm_void_t *arg' argument
 *     so that the caller can pass values into the callback without globals
 *     or hacks.
 *
 * 9.  All user facing functions should have the 'LM_' prefix before their name,
 *     and after that, they should be PascalCase.
 *
 * 10. All user facing types should have the 'lm_' prefix before their name.
 *     After that, they should be snake_case, and also end with '_t'.
 *
 * 11. Exclusively output arguments in functions should have the '_out' suffix.
 */

/* Process API */

/**
 * Enumerates processes on a system and calls a callback function for each process found.
 * 
 * @param callback The callback function that will receive the current
 * process in the enumeration and an extra argument. This function
 * should return `LM_TRUE` to continue the enumeration, or `LM_FALSE`
 * to stop it.
 * @param arg The user-defined data structure that will be passed to the
 * callback function along with the `lm_process_t` structure.
 * 
 * @return `LM_TRUE` on success, or `LM_FALSE` on failure.
 */
LM_API lm_bool_t LM_CALL
LM_EnumProcesses(lm_bool_t (LM_CALL *callback)(lm_process_t *process,
					       lm_void_t    *arg),
		 lm_void_t          *arg);
/**
 * Retrieves information about the current process, including its PID,
 * parent PID, path, name, start time, and architecture bits.
 * 
 * @param process_out A pointer to the `lm_process_t` structure that will be populated
 * with information about the current process.
 * 
 * @return `LM_TRUE` if the process information was successfully
 * retrieved or `LM_FALSE` if there was an error.
 */
LM_API lm_bool_t LM_CALL
LM_GetProcess(lm_process_t *process_out);
/**
 * Retrieves information about a specified process identified by its process ID.
 * 
 * @param pid The process ID of the process for which you want to
 * retrieve information.
 * @param process_out A pointer to the `lm_process_t` structure that will be
 * populated with information about the specified process.
 * 
 * @return `LM_TRUE` if the process information was successfully
 * retrieved or `LM_FALSE` if there was an issue during the
 * retrieval process.
 */
LM_API lm_bool_t LM_CALL
LM_GetProcessEx(lm_pid_t      pid,
		lm_process_t *process_out);
/**
 * Searches for a process by name and returns whether the process was
 * found or not.
 * 
 * @param process_name The name of the process you are trying to find
 * (e.g `game.exe`). It can also be a relative path, such as
 * `/game/hello` for a process at `/usr/share/game/hello`.
 * @param process_out A pointer to the `lm_process_t` structure that will be
 * populated with information about the found process.
 * 
 * @return `LM_TRUE` if the process with the specified name was found
 * successfully or `LM_FALSE` otherwise.
 */
LM_API lm_bool_t LM_CALL
LM_FindProcess(lm_string_t   process_name,
	       lm_process_t *process_out);
/**
 * Checks if a given process is alive based on its PID and start time.
 * 
 * @param process The process that will be checked.
 * 
 * @return `LM_TRUE` if the process specified by the input `lm_process_t`
 * is alive or `LM_FALSE` otherwise.
 */
LM_API lm_bool_t LM_CALL
LM_IsProcessAlive(const lm_process_t *process);
/**
 * Returns the system architecture bits (32 bits or 64 bits).
 * 
 * @return The system bits (32 or 64).
 */
LM_API lm_size_t LM_CALL
LM_GetSystemBits();
/* Thread API */

/**
 * Enumerates threads in the current process and calls a callback
 * function for each thread found.
 * 
 * @param callback The callback function that will receive the current
 * thread in the enumeration and an extra argument. This function
 * should return `LM_TRUE` to continue the enumeration, or `LM_FALSE`
 * to stop it.
 * @param arg The user-defined data structure that will be passed to
 * the callback function `callback` during thread enumeration. This
 * allows you to pass additional information or context to the
 * callback function if needed.
 * 
 * @return The function `LM_EnumThreads` returns a boolean value of
 * type `lm_bool_t`, containing `LM_TRUE` if it succeeds, or
 * `LM_FALSE` if it fails.
 */
LM_API lm_bool_t LM_CALL
LM_EnumThreads(lm_bool_t (LM_CALL *callback)(lm_thread_t *thread,
					     lm_void_t   *arg),
	       lm_void_t          *arg);
/**
 * Enumerates threads of a given process and invokes a callback
 * function for each thread.
 * 
 * @param process The process you want to enumerate the threads from.
 * @param callback The callback function that will receive the current
 * thread in the enumeration and an extra argument. This function
 * should return `LM_TRUE` to continue the enumeration, or `LM_FALSE`
 * to stop it.
 * @param arg The user-defined data that can be passed to the callback
 * function. It allows you to provide additional information or
 * context to the callback function when iterating over threads in a
 * process.
 * 
 * @return The function `LM_EnumThreadsEx` returns a boolean value,
 * either `LM_TRUE` or `LM_FALSE`, depending on the success of the
 * operation.
 */
LM_API lm_bool_t LM_CALL
LM_EnumThreadsEx(const lm_process_t *process,
		 lm_bool_t (LM_CALL *callback)(lm_thread_t *thread,
					       lm_void_t   *arg),
		 lm_void_t          *arg);
/**
 * Retrieves information about the thread it's running from.
 * 
 * @param thread_out A pointer to the `lm_thread_t` structure that will be populated
 * with information about the current thread, specifically the thread ID (`tid`) and
 * the process ID (`owner_pid`).
 * 
 * @return `LM_TRUE` if the thread information was successfully
 * retrieved and stored in the provided `lm_thread_t` structure.
 * Otherwise, the function returns `LM_FALSE`.
 */
LM_API lm_bool_t LM_CALL
LM_GetThread(lm_thread_t *thread_out);
/**
 * Retrieves information about a thread in a process.
 * 
 * @param process The process that the thread will be retrieved from.
 * @param thread_out A pointer to the `lm_thread_t` variable where the function will
 * store the thread information retrieved from the process.
 * 
 * @return `LM_TRUE` if the thread was retrieved successfully, or
 * `LM_FALSE` if it fails.
 */
LM_API lm_bool_t LM_CALL
LM_GetThreadEx(const lm_process_t *process,
	       lm_thread_t        *thread_out);
/**
 * Retrieves the process that owns a given thread.
 * 
 * @param thread The thread whose process will be retrieved.
 * @param process_out A pointer to the `lm_process_t` structure where the function
 * `LM_GetThreadProcess` will store the process information related to
 * the given thread.
 * 
 * @return `LM_TRUE` if the operation was successful or `LM_FALSE`
 * otherwise.
 */
LM_API lm_bool_t LM_CALL
LM_GetThreadProcess(const lm_thread_t *thread,
		    lm_process_t      *process_out);
/* Module API */

/**
 * Enumerates modules in the current process and calls a callback function
 * for each module found.
 * 
 * @param callback The callback function that will receive the current module in
 * the enumeration and an extra argument. This function should return `LM_TRUE`
 * to continue the enumeration, or `LM_FALSE` to stop it.
 * @param arg An extra argument that is passed to the callback function. This allows
 * you to provide additional information or context to the callback function when
 * it is invoked during the enumeration of modules.
 * 
 * @return Returns `LM_TRUE` if the enumeration succeeds, or `LM_FALSE` if it fails.
 */
LM_API lm_bool_t LM_CALL
LM_EnumModules(lm_bool_t (LM_CALL *callback)(lm_module_t *module,
					     lm_void_t   *arg),
	       lm_void_t          *arg);
/**
 * Enumerates modules in a specified process and calls a callback function
 * for each module found.
 * 
 * @param process The process that the modules will be enumerated from.
 * @param callback The callback function that will receive the current module in
 * the enumeration and an extra argument. This function should return `LM_TRUE`
 * to continue the enumeration, or `LM_FALSE` to stop it.
 * @param arg An extra argument that is passed to the callback function. This allows
 * you to provide additional information or context to the callback function when
 * it is invoked during the enumeration of modules.
 * 
 * @return Returns `LM_TRUE` if the enumeration succeeds, or `LM_FALSE` if it fails.
 */
LM_API lm_bool_t LM_CALL
LM_EnumModulesEx(const lm_process_t *process,
		 lm_bool_t (LM_CALL *callback)(lm_module_t *module,
					       lm_void_t   *arg),
		 lm_void_t          *arg);
/**
 * Finds a module by name and populates the `module_out` parameter with the found module information.
 * 
 * @param name The name of the module to find (e.g `game.dll`). It can also be a
 * relative path, such as `/game/hello` for a module at `/usr/share/game/hello`.
 * @param module_out A pointer to a `lm_module_t` structure. This function populates
 * this structure with information about the found module, containing information
 * such as base, end, size, path and name.
 * 
 * @return Returns `LM_TRUE` if the module is found successfully, otherwise it
 * returns `LM_FALSE`.
 */
LM_API lm_bool_t LM_CALL
LM_FindModule(lm_string_t  name,
	      lm_module_t *module_out);
/**
 * Finds a module by name in a specified process and populates the `module_out` parameter with the found module information.
 * 
 * @param process The process that the module will be searched in.
 * @param name The name of the module to find (e.g `game.dll`). It can also be a
 * relative path, such as `/game/hello` for a module at `/usr/share/game/hello`.
 * @param module_out A pointer to a `lm_module_t` structure. This function populates
 * this structure with information about the found module, containing information
 * such as base, end, size, path and name.
 * 
 * @return Returns `LM_TRUE` if the module is found successfully, otherwise it
 * returns `LM_FALSE`.
 */
LM_API lm_bool_t LM_CALL
LM_FindModuleEx(const lm_process_t *process,
		lm_string_t         name,
		lm_module_t        *module_out);
/**
 * Loads a module from a specified path into the current process.
 * 
 * @param path The path of the module to be loaded.
 * @param module_out A pointer to a `lm_module_t` type, which is used to store information
 * about the loaded module (optional).
 * 
 * @return Returns `LM_TRUE` is the module was loaded successfully, or `LM_FALSE` if it fails.
 */
LM_API lm_bool_t LM_CALL
LM_LoadModule(lm_string_t  path,
	      lm_module_t *module_out);
/**
 * Loads a module from a specified path into a specified process.
 * 
 * @param process The process that the module will be loaded into.
 * @param path The path of the module to be loaded.
 * @param module_out A pointer to a `lm_module_t` type, which is used to store information
 * about the loaded module (optional).
 * 
 * @return Returns `LM_TRUE` is the module was loaded successfully, or `LM_FALSE` if it fails.
 */
LM_API lm_bool_t LM_CALL
LM_LoadModuleEx(const lm_process_t *process,
		lm_string_t         path,
		lm_module_t        *module_out);
/**
 * Unloads a module from the current process.
 * 
 * @param module The module that you want to unload from the process.
 * 
 * @return Returns `LM_TRUE` if the module was successfully unloaded, and `LM_FALSE` if it fails.
 */
LM_API lm_bool_t LM_CALL
LM_UnloadModule(const lm_module_t *module);
/**
 * Unloads a module from a specified process.
 * 
 * @param process The process that the module will be unloaded from.
 * @param module The module that you want to unload from the process.
 * 
 * @return Returns `LM_TRUE` if the module was successfully unloaded, and `LM_FALSE` if it fails.
 */
LM_API lm_bool_t LM_CALL
LM_UnloadModuleEx(const lm_process_t *process,
		  const lm_module_t  *module);
/* Symbol API */

/**
 * Enumerates symbols in a module and calls a callback function for each symbol found.
 * 
 * @param module The module where the symbols will be enumerated from.
 * @param callback A function pointer that will receive each symbol in the enumeration and an extra argument.
 * The callback function should return `LM_TRUE` to continue the enumeration or `LM_FALSE` to stop it.
 * @param arg A pointer to user-defined data that can be passed to the callback function.
 * It allows you to provide additional information or context.
 * 
 * @return Returns `LM_TRUE` if the enumeration succeeds, `LM_FALSE` otherwise.
 */
LM_API lm_bool_t LM_CALL
LM_EnumSymbols(const lm_module_t  *module,
	       lm_bool_t (LM_CALL *callback)(lm_symbol_t *symbol,
					     lm_void_t   *arg),
	       lm_void_t          *arg);
/**
 * Enumerates symbols in a module with demangled names and calls a provided callback function for each
 * symbol found.
 *
 * @param module The module where the symbols will be enumerated from.
 * @param callback A function pointer that will receive each demangled symbol in the enumeration and
 * an extra argument. The callback function should return `LM_TRUE` to continue the enumeration or
 * `LM_FALSE` to stop it.
 * @param arg A pointer to user-defined data that can be passed to the callback function.
 * It allows you to provide additional information or context.
 * 
 * @return Returns `LM_TRUE` if the enumeration succeeds, `LM_FALSE` otherwise.
 */
LM_API lm_bool_t LM_CALL
LM_EnumSymbolsDemangled(const lm_module_t  *module,
			lm_bool_t (LM_CALL *callback)(lm_symbol_t *symbol,
						      lm_void_t   *arg),
			lm_void_t          *arg);
/* Segment API */

/**
 * Enumerates the memory segments of the current process and invokes a callback function for each segment.
 *
 * @param callback A function pointer that will receive each segment in the enumeration and an extra argument.
 * The callback function should return `LM_TRUE` to continue the enumeration or `LM_FALSE` to stop it.
 * @param arg A pointer to user-defined data that can be passed to the callback function.
 * It allows you to provide additional information or context to the callback function when iterating over segments.
 *
 * @return The function returns `LM_TRUE` if the enumeration was successful, or `LM_FALSE` otherwise.
 */
LM_API lm_bool_t LM_CALL
LM_EnumSegments(lm_bool_t (LM_CALL *callback)(lm_segment_t *segment,
                			      lm_void_t    *arg),
		lm_void_t          *arg);
/**
 * Enumerates the memory segments of a given process and invokes a callback function for each segment.
 *
 * @param process A pointer to a structure containing information about the process whose segments
 * will be enumerated.
 * @param callback A function pointer that will receive each segment in the enumeration and an extra argument.
 * The callback function should return `LM_TRUE` to continue the enumeration or `LM_FALSE` to stop it.
 * @param arg A pointer to user-defined data that can be passed to the callback function.
 * It allows you to provide additional information or context to the callback function when iterating over segments.
 *
 * @return The function returns `LM_TRUE` if the enumeration was successful, or `LM_FALSE` otherwise.
 */
LM_API lm_bool_t LM_CALL
LM_EnumSegmentsEx(const lm_process_t *process,
		  lm_bool_t (LM_CALL *callback)(lm_segment_t *segment,
						lm_void_t    *arg),
		  lm_void_t          *arg);